Commit fin main del index

--- a/index.html
+++ b/index.html
@@ -34,8 +34,59 @@
             <h2 class="no-margin">Blog de café con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
-        
     </header>
+
+
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Grano de Café</h4>
+                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia possimus explicabo 
+                    laboriosam rerum ut consequatur cumque quis consectetur expedita ad et vero molestias 
+                    quae, tempora maxime unde nemo minima facere?</P>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia possimus explicabo 
+                    laboriosam rerum ut consequatur cumque quis consectetur expedita ad et vero molestias 
+                    quae, tempora maxime unde nemo minima facere?</P>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia possimus explicabo 
+                    laboriosam rerum ut consequatur cumque quis consectetur expedita ad et vero molestias 
+                    quae, tempora maxime unde nemo minima facere?</P>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
     
 </body>
 </html>
